--- a/styles.css
+++ b/styles.css
@@ -21,17 +21,18 @@ body {
 }
 
 .main {
-    height: 50vh;
+    height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    margin-bottom: 20vh;
+    margin-bottom: 5rem;
 }
+
 
 .header {
     width: 100%;
-    min-height: 70px;
+    min-height: 100px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -63,10 +64,10 @@ a:hover::after{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100%;
+    height: 50vh;
     color: color;
     gap: 1rem;
-    background-image: url('./images/saii.jpg');
+    background-image: url('./images/bakery.avif');
     background-repeat: no-repeat;
     background-size: 100%;
     background-position: center;
@@ -77,7 +78,6 @@ a:hover::after{
     z-index: 1000;
     color: black;
     text-shadow: 4px 4px 10px rgba(0,0,0,0.1);
-    -webkit-text-stroke: 1px white;
     font-weight: bold;
 }
 .items{
@@ -86,7 +86,8 @@ a:hover::after{
     gap: 3rem;
     align-items: center;
     justify-content: center;
-    margin: 1rem 2rem;
+    margin: 0rem 2rem 5rem 0rem;
+
 }
 .item{
     width: 280px;
@@ -165,9 +166,22 @@ footer{
     }
     footer{
         font-size: 12px;
+    } 
+    .main{
+        height: 55vh;
     }
-    
+    .header{
+        padding: 2rem 0rem;
+    }
+    .header h1{
+        font-size: 2rem;
+    }
+    .header a{
+        font-size: 14px;
+    }
+    .item{
+        height: 440px;
+    }
 }
-
 
 
