--- a/styles.css
+++ b/styles.css
@@ -157,6 +157,21 @@ footer{
     align-items: center;
     justify-content: center;
 }
+.title{
+    text-align: center;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin: 0rem 0rem 2.5rem 0rem;
+}
+.title h2{
+    font-size: 3rem;
+}
+.title p{
+    font-size: 1.2rem;
+    font-style: italic;
+}
 @media(max-width: 540px) {
     h1{
         font-size: 1.2rem;
