--- a/styles.css
+++ b/styles.css
@@ -195,6 +195,15 @@ footer{
     .item{
         height: 440px;
     }
+    .title h2{
+        font-size: 2.2rem;
+    }
+    .title p{
+        font-size: 15px;
+    }
+    .main{
+        height: 48vh;
+    }
 }
 
 
