--- a/styles.css
+++ b/styles.css
@@ -182,6 +182,9 @@ footer{
     footer{
         font-size: 12px;
     } 
+    .poster{
+        margin-top: -15px;
+    }
     
     .header{
         padding: 2rem 0rem;
