--- a/styles.css
+++ b/styles.css
@@ -172,12 +172,12 @@ footer{
     font-size: 1.2rem;
     font-style: italic;
 }
-@media(max-width: 540px) {
+@media(max-width: 500px) {
     h1{
         font-size: 1.2rem;
     }
     .main{
-        height: 50vh;
+        height: 55vh;
     }
     marquee{
         animation-play-state: paused;
@@ -187,6 +187,9 @@ footer{
     } 
     .poster{
         margin-top: -15px;
+    }
+    .header{
+        padding-bottom: 30px;
     }
     .header h1{
         font-size: 2rem;
