--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body {
 }
 
 .main {
-    height: 60vh;
+    height: 50vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -32,13 +32,14 @@ body {
 
 .header {
     width: 100%;
-    min-height: 100px;
+    
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 1.5rem 0rem;
+    padding: 3rem 0rem;
     gap: 0.5rem;
+    height: 70px;
     background-color: #f8df84;
 }
 a{
@@ -176,20 +177,22 @@ footer{
     h1{
         font-size: 1.2rem;
     }
-    .main{
-        height: 55vh;
-    }
+   
     marquee{
         animation-play-state: paused;
+    }
+    .main{
+        height: 55vh;
     }
     footer{
         font-size: 12px;
     } 
-    .poster{
-        margin-top: 0px;
+    .poster{ 
+        margin-top: -10px;
+        z-index: 1;
     }
     .header{
-        padding-bottom: 30px;
+        z-index: 2;
     }
     .header h1{
         font-size: 2rem;
@@ -206,10 +209,7 @@ footer{
     .title p{
         font-size: 15px;
     }
-    .header{
-        height: 70px;
-        padding: 2rem 0rem;
-    }
+    
     
 }
 
