--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,7 @@ a:hover::after {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 50vh;
+    height: 50%;
     color: color;
     gap: 1rem;
     background-image: url('./images/bakery.avif');
@@ -166,7 +166,7 @@ footer {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    margin: 0rem 0rem 2.5rem 0rem;
+    margin: 1rem 0rem 3rem 0rem;
 }
 
 .title h2 {
@@ -218,10 +218,10 @@ footer {
     }
 
     .title h2 {
-        font-size: 2rem;
+        font-size: 1.8rem;
     }
 
     .title p {
-        font-size: 13px;
+        font-size: 10px;
     }
 }
