--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    margin-bottom: 5rem;
+    
 }
 
 .header {
@@ -76,6 +76,7 @@ a:hover::after {
     background-position: center;
     width: 100%;
     text-align: center;
+    margin-bottom: 0;
 }
 
 
@@ -171,6 +172,7 @@ footer {
 
 .title h2 {
     font-size: 3rem;
+    margin-top: 0;
 }
 
 .title p {
@@ -199,6 +201,7 @@ footer {
         position: absolute;
         margin-top: -15px;
         z-index: 1;
+        margin-bottom: 0;
     }
 
     .header {
@@ -219,6 +222,7 @@ footer {
 
     .title h2 {
         font-size: 1.8rem;
+        margin-top: 0;
     }
 
     .title p {
