--- a/styles.css
+++ b/styles.css
@@ -167,7 +167,7 @@ footer {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    margin: 1rem 0rem 3rem 0rem;
+    margin-bottom: 1.5rem;
 }
 
 .title h2 {
