--- a/styles.css
+++ b/styles.css
@@ -179,7 +179,14 @@ footer {
     font-size: 1.2rem;
     font-style: italic;
 }
-
+@media(max-width: 700px){
+    .title h2{
+        font-size: 2.8rem;
+    }
+    .title p{
+        font-size: 1rem;
+    }
+}
 @media(max-width: 500px) {
     h1 {
         font-size: 1.2rem;
@@ -218,6 +225,10 @@ footer {
 
     .item {
         height: 440px;
+    }
+
+    .title {
+        margin-top: -3rem;
     }
 
     .title h2 {
