--- a/styles.css
+++ b/styles.css
@@ -179,9 +179,9 @@ footer {
     font-size: 1.2rem;
     font-style: italic;
 }
-@media(max-width: 700px){
+@media(min-width: 500px) and (max-width: 800px){
     .title h2{
-        font-size: 2.8rem;
+        font-size: 2.3rem;
     }
     .title p{
         font-size: 1rem;
